--- a/arch/arm64/boot/dts/rockchip/px30.dtsi
+++ b/arch/arm64/boot/dts/rockchip/px30.dtsi
@@ -340,22 +340,30 @@
 
 	dmc_opp_table: dmc_opp_table {
 		compatible = "operating-points-v2";
-		opp01 {
-			opp-hz = /bits/ 64 <166000000>;
-			opp-microvolt = <950000>;
-			opp-suspend;
-		};
-		opp02 {
+		opp-194000000 {
 			opp-hz = /bits/ 64 <194000000>;
 			opp-microvolt = <950000>;
 		};
-		opp03 {
-			opp-hz = /bits/ 64 <666000000>;
-			opp-microvolt = <1150000>;
+		opp-328000000 {
+			opp-hz = /bits/ 64 <328000000>;
+			opp-microvolt = <950000>;
 		};
-		opp04 {
+		opp-450000000 {
+			opp-hz = /bits/ 64 <450000000>;
+			opp-microvolt = <950000>;
+		};
+		opp-528000000 {
+			opp-hz = /bits/ 64 <528000000>;
+			opp-microvolt = <975000>;
+		};
+		opp-666000000 {
+			opp-hz = /bits/ 64 <666000000>;
+			opp-microvolt = <1050000>;
+		};
+		opp-786000000 {
 			opp-hz = /bits/ 64 <786000000>;
-			opp-microvolt = <1150000>;
+			opp-microvolt = <1100000>;
+			status = "disabled"; // ???
 		};
 	};
 
@@ -366,7 +374,7 @@
 		#size-cells = <1>;
 
 		pmu_io_domains: io-domains {
-			compatible = "rockchip,px30-pmu-io-voltage-domain";
+			 compatible = "rockchip,px30-pmu-io-voltage-domain";
 			status = "disabled";
 		};
 
