--- a/redhat/Makefile.variables
+++ b/redhat/Makefile.variables
@@ -6,18 +6,18 @@
 
 # This is the source branch that you are building out of typically this is
 # the current branch.
-DIST_BRANCH ?= "os-build"
+DIST_BRANCH ?= "fedora-5.14"
 
 # The branch used as upstream. This is what the upstream tarball is it
 # should be tracked in a local branch. This would be "master" for the
 # Linus master branch or linux-5.x.y for a stable branch. It can also be
 # any other upstream you have added as a branch locally.
-UPSTREAM_BRANCH ?= master
+UPSTREAM_BRANCH ?= linux-5.14.y
 
 # If VERSION_ON_UPSTREAM is set, the versioning of the rpm package is based
 # on a branch tracking upstream. This allows for generating rpms
 # based on untagged releases.
-VERSION_ON_UPSTREAM:=1
+VERSION_ON_UPSTREAM:=0
 
 # RELEASED_KERNEL swaps between the pre-release secureboot keys and
 # the release one, for vmlinux signing. It also controls whether Fedora
@@ -27,10 +27,10 @@ VERSION_ON_UPSTREAM:=1
 #  kernel release. (This includes prepatch or "rc" releases.)
 # Set RELEASED_KERNEL to 0 when the upstream source tarball contains an
 #  unreleased kernel development snapshot.
-RELEASED_KERNEL:=0
+RELEASED_KERNEL:=1
 
 # BUMP_RELEASE determines whether the pkgrelease is bumped when you call
 # 'make dist-release'.  It should be set to "yes" if you expect to do
 # multiple updates and builds without bumping the base version, and no
 # when you expect every build to use a different base kernel version.
-BUMP_RELEASE:=yes
+BUMP_RELEASE:=no
